--- a/modules-available/locationinfo/frontend/doorsign.html
+++ b/modules-available/locationinfo/frontend/doorsign.html
@@ -487,7 +487,7 @@ optional:
 		}
 		function queryCalendar() {
 			$.ajax({
-				url: "../../../api.php?do=locationinfo&action=clendar&id="+roomId,
+				url: "../../../api.php?do=locationinfo&action=calendar&id="+roomId,
 				dataType: 'json',
 				cache: false,
 				timeout: 30000,
