frontend: fix that it not uses more then 7 days

--- a/modules-available/locationinfo/frontend/doorsign.html
+++ b/modules-available/locationinfo/frontend/doorsign.html
@@ -579,7 +579,7 @@ optional:
 
 			if(scaleDaysAuto) {
 				var result = (44 + cal.weekCalendar("option","daysToShow")*columnWidth)/100;
-				result = parseInt(Math.max(Math.abs(result),1));
+				result = parseInt(Math.min(Math.max(Math.abs(result),1),7));
 				if(result != parseInt(cal.weekCalendar("option","daysToShow"))){
 					cal.weekCalendar("option", "daysToShow", Math.abs(result));
 				}
